[package]
name = "spcrscan"
version = "0.1.0"
edition = "2021"
authors = ["spcmnd"]
description = "This is the spcmnd's rust TCP scanner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.3", features = ["derive"] }
